tests/paczka1/fuzzy1/26389175.err
Error in line 6: JbWcD A625 -2,7
Error in line 8: A993 A625 66,8
Error in line 5: JbWcD A625 31,3
Error in line 21: SGVM A99Q 47,6
Error in line 20: JbWcD A239 73,2
Error in line 17: SGVM A625 70,3
Error in line 35: oP4 A625 62,2
